--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -23,7 +23,6 @@
         position: relative;
         border-radius: 0.9375rem ;
         margin: 0 auto;
-        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.09);
         border-left: 2rem solid #EEEEEE;
         border-right: 2rem solid #EEEEEE;
 
@@ -43,6 +42,7 @@
         border-top-right-radius:.9375rem;
         border-top-left-radius: .9375rem;
         padding: .625rem 1.25rem;
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.09);
 
         &--left {
             margin-right: auto;
@@ -98,6 +98,9 @@
     &__screen-content{
         padding: 2rem;
         background-color: #fbfbfb;
+        border-bottom-right-radius:.9375rem;
+        border-bottom-left-radius: .9375rem;
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.09);
     }
 
     &__text-form-container{
