--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -16,6 +16,7 @@
         @include tablet {
             flex-direction: row;
             justify-content: center;
+            align-items: baseline;
             gap: 1.5rem;
             margin-bottom: 2rem;
         }
@@ -33,8 +34,16 @@
     &__link {
         font-size: $mobi-link;
 
+        @include tablet {
+            margin-top: 1rem;
+        }
+
         &--top {
             margin-top: 1rem;
+
+            @include tablet {
+                margin-top: 0;
+            }
         }
 
         @include tablet {
