Change font-size of a

--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -9,7 +9,8 @@
 
 body, html {
     font-family: "Gaegu";
-    background-color: #EEEEEE;
+    // background-color: #EEEEEE;
+    background-color:#FAFAFA ;
     color:rgb(34, 40, 49);
 }
 
