--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -6,7 +6,7 @@
     padding: 2rem 2rem 0 2rem;
 
     @include desktop {
-        padding: 2.5rem;
+        padding: 2rem;
     }
 
     &__bar-container {
@@ -88,7 +88,7 @@
             position: absolute;
             right: 0;
             top: 0;
-            padding: 3.5rem;
+            padding: 2rem;
         }
 
         &--open {
@@ -115,8 +115,13 @@
             font-size: 1.5rem;
             text-decoration: none;
 
+            @include tablet {
+                font-size: 2rem;
+            }
+
             @include desktop {
                 color: $black;
+                font-size: 2.5rem;
             }
 
             &:hover {
