--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -3,25 +3,17 @@
 
 .header {
 
-    height: 90vh;
+    height: 60vh;
     display: flex;
     align-items: center;
     justify-content: center;
     box-sizing: border-box;
     min-height: fit-content;
     background-image: url('../../assets/images/header-background.jpg');
+    padding: 0 2rem;
 
     @include tablet {
-        height: 80vh;
-        // padding-bottom: 15vh;
-        // margin: 0 4rem;
-    }
-
-    @include desktop {
-        // padding-bottom: 35vh;
-        height: 80vh;
-        // margin: 0 10rem;
-
+        height: 50vh;
     }
 
     &__container {
@@ -66,7 +58,7 @@
         }
     }
 
-    &__text {
+    &__text-container {
         align-items: center;
         text-align: center;
 
@@ -89,39 +81,51 @@
         }
     }
 
-    &__text p {
-        font-weight: 500;
-    }
-
-    &__text-p1 {
-        font-size: $mobi-hero-text;
-        margin-bottom: 1rem;
+    &__text{
+        all: unset;
+        display: block;
+        font-size: 4.5rem;
+        margin: 1rem 0;
+        font-weight: 600;
+        text-align: left;
+        line-height: 4rem;
 
         @include desktop {
-            font-size: $tablet-hero-text;
+            font-size: 5rem;
         }
     }
 
-    &__text-p2 {
-        font-size: $mobi-hero-p2;
-        margin: 1rem;
+    &__intro-container {
+        position: relative;
         
-        @include desktop {
-            font-size: $tablet-hero-p2;
+        &::before {
+            content: "";
+            background-color: #fff;
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+            border-radius: 1.25rem;
+            opacity: 45%;
+            z-index: 1;
         }
     }
 
-    &__title {
-        font-size: $mobi-hero-title;
+    &__intro {
+        position: relative;
+        font-size: 0.9rem;
         text-align: center;
         margin: 1rem;
+        padding: 1rem 0;
+        z-index: 2;
 
         @include tablet {
-            font-size: $tablet-hero-title;
+            font-size: 1rem;
         }
 
         @include desktop {
-            font-size: $desktop-hero-title;
+            font-size: 1.2rem;
             margin: 0;
         }
     }
