--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -228,5 +228,14 @@
         border-radius: 20px;
         text-align: center;
         cursor: pointer;
+
+        &:hover {
+            background-color: $link-hover;
+        }
+
+        @include tablet {
+            font-size: 2rem;
+            padding: 0;
+        }
     }
 }
