--- a/src/components/ProjectCard/ProjectCard.scss
+++ b/src/components/ProjectCard/ProjectCard.scss
@@ -172,6 +172,12 @@
         font-weight: 600;
         text-align: center;
 
+        &:hover {
+            background-color:$link-hover;
+            text-decoration: none;
+            color: white;
+        }
+
         @include tablet {
             font-size: 1.2rem;
         }
